# validation-api

./: .gitignore  .~Tasks.xlsx  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  LICENSE  Makefile  Readme.md  Todo.md  build.sh  cmake_install.cmake  conanfile.txt  messages_global.json  server.json  test.sh  test.txt  test.xml  testConfigService.sh
.cache/clangd/index/: main.cpp.A4A95698386EFE44.idx
.github/workflows/: static.yml
docs/html/: ConfigService_8cpp.html  ConfigService_8cpp__incl.map  ConfigService_8cpp__incl.md5  ConfigService_8hpp.html  ConfigService_8hpp__dep__incl.map  ConfigService_8hpp__dep__incl.md5  ConfigService_8hpp__incl.map  ConfigService_8hpp__incl.md5  ConfigService_8hpp_source.html  ConfigWatcher_8cpp.html  ConfigWatcher_8cpp__incl.map  ConfigWatcher_8cpp__incl.md5  ConfigWatcher_8cpp_af492780bc7786abac56fa242d4fc3045_icgraph.map  ConfigWatcher_8cpp_af492780bc7786abac56fa242d4fc3045_icgraph.md5  ConfigWatcher_8hpp.html  ConfigWatcher_8hpp__dep__incl.map  ConfigWatcher_8hpp__dep__incl.md5  ConfigWatcher_8hpp__incl.map  ConfigWatcher_8hpp__incl.md5  ConfigWatcher_8hpp_source.html  ErrorBuilder_8cpp.html  ErrorBuilder_8cpp__incl.map  ErrorBuilder_8cpp__incl.md5  ErrorBuilder_8hpp.html  ErrorBuilder_8hpp__dep__incl.map  ErrorBuilder_8hpp__dep__incl.md5  ErrorBuilder_8hpp__incl.map  ErrorBuilder_8hpp__incl.md5  ErrorBuilder_8hpp_source.html  Helpers_8cpp.html  Helpers_8cpp__incl.map  Helpers_8cpp__incl.md5  Helpers_8hpp (conflicted copy 2024-11-13 142309).html  Helpers_8hpp (conflicted copy 2024-11-19 145404).html  Helpers_8hpp.html  Helpers_8hpp__dep__incl.map  Helpers_8hpp__dep__incl.md5  Helpers_8hpp__incl.map  Helpers_8hpp__incl.md5  Helpers_8hpp_source (conflicted copy 2024-11-13 142309).html  (+266 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_5.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+25 more)
docs/latex/: ConfigService_8cpp.tex  ConfigService_8cpp__incl.md5  ConfigService_8hpp.tex  ConfigService_8hpp__dep__incl.md5  ConfigService_8hpp__incl.md5  ConfigService_8hpp_source.tex  ConfigWatcher_8cpp.tex  ConfigWatcher_8cpp__incl.md5  ConfigWatcher_8cpp_af492780bc7786abac56fa242d4fc3045_icgraph.md5  ConfigWatcher_8hpp.tex  ConfigWatcher_8hpp__dep__incl.md5  ConfigWatcher_8hpp__incl.md5  ConfigWatcher_8hpp_source.tex  ErrorBuilder_8cpp.tex  ErrorBuilder_8cpp__incl.md5  ErrorBuilder_8hpp.tex  ErrorBuilder_8hpp__dep__incl.md5  ErrorBuilder_8hpp__incl.md5  ErrorBuilder_8hpp_source.tex  Helpers_8cpp.tex  Helpers_8cpp__incl.md5  Helpers_8hpp.tex  Helpers_8hpp__dep__incl.md5  Helpers_8hpp__incl.md5  Helpers_8hpp_source.tex  IService_8hpp.tex  IService_8hpp__dep__incl.md5  IService_8hpp_source.tex  LogMessage_8hpp.tex  LogMessage_8hpp_source.tex  LoggerService_8hpp.tex  LoggerService_8hpp_source.tex  Logger_8cpp.tex  Logger_8cpp__incl.md5  Logger_8hpp.tex  Logger_8hpp__dep__incl.md5  Logger_8hpp__incl.md5  Logger_8hpp_source.tex  ValidationServer_8cpp.tex  ValidationServer_8cpp__incl.md5  (+111 more)
include/lib/: ErrorBuilder.hpp  Helpers.hpp  Validation.hpp  XmlToJson.hpp
include/validation-api/: ConfigActor.hpp  ConfigService.hpp  ConfigWatcher.hpp  ConfigWatcher.hpp.orig  IService.hpp  LogMessage.hpp  Logger.hpp  LoggerService.hpp  ValidationServer.hpp
src/: ConfigActor.cpp  ConfigService.cpp  ConfigWatcher.cpp  Logger.cpp  ValidationServer.cpp  main.cpp
src/lib/: ErrorBuilder.cpp  Helpers.cpp  Validation.cpp  xmlToJson.cpp
templates/: test.xml
tests/: ConfigServiceTest.cpp  ConfigWatcherTest.cpp  LoggerTest.cpp  ValidationServerTest.cpp  ValidationSeverTest.cpp  ValidationTest.cpp
